--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ axum = "0.7.4"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
 tokio = { version = "1.36.0", features = ["full"] }
+tracing = "0.1.40"
+tracing-subscriber = "0.3.18"
