--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
 name = "derper-verifier"
-license = "MIT"
 version = "0.1.0"
 edition = "2021"
+description = "A verifier for the --verify-clients-url feature of custom Tailscale derpers"
+license = "MIT"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
